tests/invalid/merge_ground_any.err_exp
merge_ground_any.m:013: In clause for `pass(in,
merge_ground_any.m:013:   in(merge_ground_any.hpair(ground, any)),
merge_ground_any.m:013:   out(merge_ground_any.hpair(ground, any)))':
merge_ground_any.m:013:   mode error: argument 5 did not get sufficiently
merge_ground_any.m:013:   instantiated.
merge_ground_any.m:013:   Final instantiatedness of `X' was
merge_ground_any.m:013:   `bound(merge_ground_any.'+'(ground, ground) ;
merge_ground_any.m:013:   merge_ground_any.'-'(ground, any))',
merge_ground_any.m:013:   expected final instantiatedness was
merge_ground_any.m:013:   `bound(merge_ground_any.'-'(ground, any))'.
